# snake_game

./: .gitignore  config.py  main.py  pyproject.toml  pyrightconfig.json
drawing_objects/: __init__.py  apple.py  grid.py  snake.py
game/: __init__.py  base.py  game.py
models/: model_v2.pth  model_v2_batch.pth  model_v2_batch_till_high_probability_40.pth  model_v2_batch_till_high_probability_46.pth  model_v3.pth
src/: action.py  config.py  main.py  state.py
src/drawing_objects/: __init__.py  apple.py  drawing_object.py  factories.py  grid.py  rectangle.py  snake.py  text.py
src/game/: __init__.py  base.py  base_deep_q_learning_game.py  base_q_learning_game.py  deep_q_learning_game.py  factories.py  game.py  human_game.py  long_snake_deep_q_learning_game.py  q_learning_game.py
src/neural_networks/: __init__.py  base.py  factories.py
src/players/: __init__.py  abstract_q_learning_player.py  deep_q_learning_player.py  factories.py  q_learning_player.py
src/surfaces/: __init__.py  base.py  factories.py
src/surfaces/metrics/: __init__.py  score.py
src/surfaces/playboards/: __init__.py  base.py  long_snake_playboard.py
src/utils/: factories.py  state.py  types.py
